add support to karma test runner

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,10 @@
         "dinache",
         "dinoloop",
         "iquery",
+        "kjhtml",
         "kkonkula",
+        "mochawesome",
+        "preprocessors",
         "upsert"
     ]
 }
