configured npm publish and readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "cSpell.words": [
         "Karthik",
         "Konkula",
+        "Quickstart",
         "dinache",
         "dinoloop",
         "iquery",
