--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "lint": "tslint -p ./tsconfig.app.json -c ./tslint.json \"./src/**/*.ts*\"",
         "lint:test": "tslint -p ./tsconfig.spec.json -c ./tslint.json \"./tests/**/*.ts*\"",
         "start": "npm run build",
+        "test:e2e": "ts-mocha -p ./tsconfig.spec.json tests/e2e/**/*.ts --reporter mochawesome",
         "test:unit": "karma start ./tests/unit/karma.conf.js",
         "test": "jasmine-ts JASMINE_CONFIG_PATH=spec/support/jasmine.json"
     },
@@ -35,18 +36,18 @@
         "express": "~4.16.3"
     },
     "devDependencies": {
-        "@types/express": "^4.11.1",
+        "@types/express": "~4.11.1",
         "@types/jasmine": "~3.3.9",
-        "@types/node": "^10.0.22",
-        "@types/supertest": "^2.0.4",
+        "@types/node": "~10.0.0",
+        "@types/supertest": "~2.0.4",
         "jasmine": "~3.3.1",
         "jasmine-spec-reporter": "~4.2.1",
         "jasmine-ts": "~0.2.1",
-        "karma": "~2.0.5",
+        "karma": "^4.0.1",
         "karma-chrome-launcher": "~2.2.0",
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "~1.4.0",
-        "karma-typescript": "~3.0.12",
+        "karma-typescript": "^4.0.0",
         "mocha": "~5.2.0",
         "mochawesome": "~3.0.2",
         "moq.ts": "~2.6.1",
@@ -55,7 +56,8 @@
         "supertest": "~3.1.0",
         "ts-mocha": "~1.2.0",
         "ts-node": "~6.0.5",
-        "typescript": "^2.8.1"
+        "tslint": "^5.13.1",
+        "typescript": "~2.8.1"
     },
     "engines": {
         "node": ">= 8.10.x",
